<resources>
    <string name="app_name">android-app</string>
    <string name="stand_button">Stand</string>
    <string name="bow_button">Bow</string>
    <string name="straight_button">Straight</string>
    <string name="down_button">Down</string>
    <string name="walk_button">Walk</string>
    <string name="shake_button">Shake</string>
    <string name="sit_button">Sit</string>
    <string name="hey_button">Hey</string>

    <string name="connect_button_connected">Disconnect</string>
    <string name="connect_button_disconnected">Connect</string>
    <string name="connect_button_connecting">...</string>

    <string name="dog_image">Dog image</string>
    <string name="mic_button">Mic button</string>
    <string name="send_message_text">Send message</string>
</resources>
