<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/dog_image"
        android:layout_width="380dp"
        android:layout_height="449dp"
        android:layout_marginTop="112dp"
        android:alpha="0.2"
        android:contentDescription="@string/dog_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dog" />

    <Button
        android:id="@+id/stand_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="44dp"
        android:minWidth="120dp"
        android:text="@string/stand_button"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="70dp"
        android:minWidth="120dp"
        android:text="@string/bow_button"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="@+id/stand_button"
        app:layout_constraintTop_toTopOf="@+id/stand_button" />

    <Button
        android:id="@+id/straight_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="70dp"
        android:minWidth="120dp"
        android:text="@string/straight_button"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="@+id/bow_button"
        app:layout_constraintTop_toTopOf="@+id/bow_button" />


    <Button
        android:id="@+id/down_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="70dp"
        android:minWidth="120dp"
        android:text="@string/down_button"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="@+id/straight_button"
        app:layout_constraintTop_toTopOf="@+id/straight_button" />

    <Button
        android:id="@+id/walk_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="70dp"
        android:minWidth="120dp"
        android:text="@string/walk_button"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="@+id/down_button"
        app:layout_constraintTop_toTopOf="@+id/down_button" />

    <Button
        android:id="@+id/connect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/colorButtonEnabled"
        android:minWidth="120dp"
        android:text="@string/connect_button_disconnected"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/mic_button"
        android:layout_width="117dp"
        android:layout_height="143dp"
        android:layout_marginBottom="100dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/mic"
        android:contentDescription="@string/mic_button" />

    <TextView
        android:id="@+id/send_message_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/send_message_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mic_button" />

    <TextView
        android:id="@+id/sent_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="40dp"
        android:paddingLeft="40dp"
        android:paddingEnd="40dp"
        android:paddingRight="40dp"
        android:layout_marginTop="30dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/send_message_text" />

</android.support.constraint.ConstraintLayout>
